--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ uvicorn = "*"
 pydantic = "*"
 wikipedia = "*"
 pytest = "*"
+flake8 = "*"
 
 [dev-packages]
 
@@ -17,4 +18,6 @@ python_version = "3.10"
 
 [scripts]
 wiki_searcher = "python -m wiki_searcher"
+lint_syntax = "python -m flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics"
+lint_warnings = "python -m flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics"
 tests = "python -m pytest -s"
