--- a/Pipfile
+++ b/Pipfile
@@ -8,10 +8,12 @@ fastapi = "*"
 uvicorn = "*"
 pydantic = "*"
 wikipedia = "*"
-pytest = "*"
-flake8 = "*"
 
 [dev-packages]
+coverage-badge = "*"
+coverage = "*"
+pytest = "*"
+flake8 = "*"
 
 [requires]
 python_version = "3.10"
@@ -21,3 +23,4 @@ wiki_searcher = "python -m wiki_searcher"
 lint_syntax = "python -m flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics"
 lint_warnings = "python -m flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics"
 tests = "python -m pytest -s"
+tests_with_coverage = "python -m coverage run -m pytest"
