--- a/.github/workflows/test-wiki-searcher.yaml
+++ b/.github/workflows/test-wiki-searcher.yaml
@@ -34,4 +34,4 @@ jobs:
     - name: Test with pytest and get coverage
       run: |
         python -m pipenv run tests_with_coverage
-        cd .github/coverage && python -m pipenv run coverage-badge -o ./.github/coverage/coverage.svg
+        cd .github/coverage && python -m pipenv run coverage-badge -o coverage.svg
