--- a/.github/workflows/test-wiki-searcher.yaml
+++ b/.github/workflows/test-wiki-searcher.yaml
@@ -34,4 +34,5 @@ jobs:
     - name: Test with pytest and get coverage
       run: |
         python -m pipenv run tests_with_coverage
-        cd .github/coverage && python -m pipenv run coverage-badge -o coverage.svg
+    - name: Upload coverage reports to Codecov with GitHub Action
+      uses: codecov/codecov-action@v3
