--- a/.github/workflows/test-wiki-searcher.yaml
+++ b/.github/workflows/test-wiki-searcher.yaml
@@ -33,6 +33,4 @@ jobs:
         python -m pipenv run lint_warnings
     - name: Test with pytest and get coverage
       run: |
-        python -m pipenv run tests_with_coverage
-    - name: Upload coverage reports to Codecov with GitHub Action
-      uses: codecov/codecov-action@v3
+        python -m pipenv run tests
